--- a/posts.qmd
+++ b/posts.qmd
@@ -2,6 +2,7 @@
 title: "Posts"
 listing:
   contents: posts
+  feed: true
   sort: "date desc"
   date-format: "long"
   type: default
@@ -11,5 +12,3 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
-
-About this blog
