add: migrated wandb reports

--- a/index.qmd
+++ b/index.qmd
@@ -4,15 +4,18 @@ image: assets/soumik_rakshit.png
 about:
   template: jolla
   links:
+    - icon: github
+      text: Github
+      href: https://github.com/soumik12345
     - icon: twitter
       text: Twitter
       href: https://twitter.com/soumikRakshit96
     - icon: linkedin
       text: LinkedIn
       href: https://linkedin.com/in/soumikrakshit/
-    - icon: github
-      text: Github
-      href: https://github.com/soumik12345
+    - icon: steam
+      text: Steam
+      href: https://steamcommunity.com/id/geekyRakshit/
 ---
 
 Hi there 👋. I am Soumik Rakshit (সৌমিক রক্ষিত).
