update: add kaggle to landing page

--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,8 @@ about:
     - icon: github
       text: Github
       href: https://github.com/soumik12345
+    - text: "{{< fa brands kaggle >}} Kaggle"
+      href: https://www.kaggle.com/soumikrakshit
     - icon: twitter
       text: Twitter
       href: https://twitter.com/soumikRakshit96
