--- a/index.qmd
+++ b/index.qmd
@@ -22,6 +22,6 @@ about:
 
 Hi there 👋. I am Soumik Rakshit (সৌমিক রক্ষিত).
 
-I develop machine learning tools at [Weights & Biases](https://wandb.ai/site).
+I am working on developing the visual cortex of AGI at [Roboflow](https://roboflow.com/).
 
-You can learn more about me [here](./about).
+You can learn more about me [here](./about.html).
